--- a/LoginFirebase/app/src/main/res/drawable/round.xml
+++ b/LoginFirebase/app/src/main/res/drawable/round.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent"/>
-            <stroke android:width="1dp" android:color="#FF0000"/>
-            <corners
-                android:bottomLeftRadius="300dp"
-                />
-            <gradient
-                android:type="radial"
-                android:startColor="#FFC107"
-                android:endColor="#f15330"
-                android:gradientRadius="150dp"/>
-        </shape>
-    </item>
 
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    
+<gradient
+ android:startColor="@android:color/holo_orange_dark" />
+    
+<corners
+        
+	android:bottomLeftRadius="140dp"
+        
+	android:radius="15dp"
+        >
+</corners>
+</shape>
